--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <p>  a dobrze wytresowany pies nie szczeka bez powodu. 
     Psa można także nauczyć wielu ciekawyh sztuczek, np. aportowania, podawania łapy, turlania się itp. Badaia wykazały, że człowiek mający psa jest często o wiele szczęśliwszy i czuje się mniej samotny. Każdy człowiek jest inny, tak smao jest z psami. Każdy pies zachowuje się inaczej. Niektoe są spokojne, inne ruchliwe. Na siwece jest wiele ras psów, 
     więc napewno dla każdego znajdzie się odpowiedni.</p>
+<img src="png-transparent-paw-patrol-dog-dog-image-file-formats-animals-cartoon-thumbnail.png" width="200" alt="" align="left">
   
     <ul>
         <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fprsink%2Fposts%2Fpjes%2F601595103694205%2F&psig=AOvVaw1DPRulokHLmQtk1b3VPtC8&ust=1665746799902000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCKCG7cSM3foCFQAAAAAdAAAAABAE">pjesiunio</a></li>
